Sync all content

--- a/content/resources/10-492-1f04-th.md
+++ b/content/resources/10-492-1f04-th.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/10-492-1-integrated-chemical-engineering-topics-i-process-control-by-design-fall-2004/52c50b04029de75d12c166accba20c5b_10-492-1f04-th.jpg
 file_size: 8269
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Are the manipulated variables sufficient to overcome disturbances? This
     plot shows the demands on hot and cold flow for various combinations of disturbances
