--- a/content/resources/10-492-1f04.md
+++ b/content/resources/10-492-1f04.md
@@ -8,6 +8,8 @@ description: Are the manipulated variables sufficient to overcome disturbances? 
 file: /courses/10-492-1-integrated-chemical-engineering-topics-i-process-control-by-design-fall-2004/5c554eb9211fa1360feb77cf87bb5dec_10-492-1f04.jpg
 file_size: 73764
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Are the manipulated variables sufficient to overcome disturbances? This
     plot shows the demands on hot and cold flow for various combinations of disturbances
